@@ -64,6 +64,10 @@
      [sshconnect.c]
      Make ssh print the random art also when ssh'ing to a host using IP only.
      spotted by naddy@, ok and help djm@ dtucker@
+   - otto@cvs.openbsd.org 2008/06/12 00:13:13
+     [key.c]
+     use an odd number of rows and columns and a separate start marker, looks
+     better; ok grunk@
 
 20080611
  - (djm) [channels.c configure.ac]
@@ -4226,4 +4230,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4975 2008/06/12 18:47:34 dtucker Exp $
+$Id: ChangeLog,v 1.4976 2008/06/12 18:48:11 dtucker Exp $
